web/src/components/Dashboard/Monitor/Monitor.css
@layer components {
    .monitor {
        background: var(--monitor-background, transparent);
        border: 1px solid var(--monitor-border-color, var(--border-color));
        border-radius: 4px;
        display: flex;
        flex-direction: column;
        transition: border-color .10s ease-in-out;
    }

    .monitor.selected {
        border-color: var(--selected-monitor-border-color, var(--primary-color));
    }

    .monitor_top {
        display: flex;
        flex-direction: column;
        border-top-left-radius: 3px;
        border-top-right-radius: 3px;
        background: var(--monitor-header-background, transparent);
        justify-content: space-between;
        padding: 4px 9px;
        flex: 1;
    }

    .monitor_inactive_widget {
        margin-right: 4px;
    }
    
    .monitor_top_controls {
        display: flex;
        justify-content: flex-start;
        align-items: center;
    }

    .monitor_dialog_button_container .button {
        padding-right: 0;
    }

    .monitor_top_upper {
        max-height: 38px;
        display: flex;
        flex: 1;
        align-items: center;
    }

    .monitor_name {
        font-weight: 500;
        text-overflow: ellipsis;
        margin-right: 9px;
        overflow: hidden;
        max-width: 100%;
        white-space: nowrap;
        cursor: default;
    }

    .monitor_menu_container {
        display: flex;
        align-items: center;
    }

    .monitor_name:hover {
        text-decoration: underline;
    }

    .monitor_timestamp {
        color: var(--secondary-color, var(--primary-color));
        cursor: default;
        display: flex;
        align-items: center;
    }

    .monitor_bottom {
        margin-top: auto;
        border-top: 1px solid var(--timeline-border-color, transparent);
        background: var(--timeline-background, transparent);
        display: flex;
        flex-direction: row-reverse;
        transition: background .10s ease-in-out;
        height: 30px;
        border-bottom-left-radius: 4px;
        border-bottom-right-radius: 4px;
    }

    .monitor_bottom:hover {
        background: var(--timeline-hover-background, var(--hover-background));
    }
}

